Lanzamiento inicial: MinimalStore por ValBitStudio

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "E-commerce moderno y minimalista construido con React, TypeScript, Vite y Tailwind CSS. Desarrollado por ValBitStudio.",
   "scripts": {
     "dev": "vite",
     "build": "npm run sitemap && tsc && vite build",
